// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ReplyList
  ReplyListComponent={[Function]}
  asset={
    Object {
      "id": "asset-id",
    }
  }
  comment={
    Object {
      "id": "comment-id",
      "replies": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "comment-1",
            },
          },
          Object {
            "node": Object {
              "id": "comment-2",
            },
          },
        ],
      },
    }
  }
  comments={
    Array [
      Object {
        "id": "comment-1",
      },
      Object {
        "id": "comment-2",
      },
    ]
  }
  disableShowAll={false}
  indentLevel={1}
  me={null}
  onShowAll={[Function]}
/>
`;

exports[`renders correctly when replies are null 1`] = `""`;

exports[`when has more replies renders hasMore 1`] = `
<ReplyList
  asset={
    Object {
      "id": "asset-id",
    }
  }
  comment={
    Object {
      "id": "comment-id",
      "replies": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "comment-1",
            },
          },
          Object {
            "node": Object {
              "id": "comment-2",
            },
          },
        ],
      },
    }
  }
  comments={
    Array [
      Object {
        "id": "comment-1",
      },
      Object {
        "id": "comment-2",
      },
    ]
  }
  disableShowAll={false}
  hasMore={true}
  indentLevel={1}
  me={null}
  onShowAll={[Function]}
/>
`;

exports[`when has more replies when showing all disables show all button 1`] = `
<ReplyList
  asset={
    Object {
      "id": "asset-id",
    }
  }
  comment={
    Object {
      "id": "comment-id",
      "replies": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "comment-1",
            },
          },
          Object {
            "node": Object {
              "id": "comment-2",
            },
          },
        ],
      },
    }
  }
  comments={
    Array [
      Object {
        "id": "comment-1",
      },
      Object {
        "id": "comment-2",
      },
    ]
  }
  disableShowAll={true}
  hasMore={true}
  indentLevel={1}
  me={null}
  onShowAll={[Function]}
/>
`;

exports[`when has more replies when showing all enable show all button after loading is done 1`] = `
<ReplyList
  asset={
    Object {
      "id": "asset-id",
    }
  }
  comment={
    Object {
      "id": "comment-id",
      "replies": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "comment-1",
            },
          },
          Object {
            "node": Object {
              "id": "comment-2",
            },
          },
        ],
      },
    }
  }
  comments={
    Array [
      Object {
        "id": "comment-1",
      },
      Object {
        "id": "comment-2",
      },
    ]
  }
  disableShowAll={false}
  hasMore={true}
  indentLevel={1}
  me={null}
  onShowAll={[Function]}
/>
`;
